# liesym

./: .buildinfo  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  algebra.html  build-wheels.sh  genindex.html  group.html  index.html  liesym.algebras.html  liesym.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py  tox.ini
.github/: release.yaml
.github/worflows/: tests.yaml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml  release.yaml  test-publish.yaml  tests.yaml
_modules/: index.html
_modules/liesym/algebras/: _base.html  _classic.html  _exceptionals.html  base.html  classic.html  exceptionals.html
_modules/liesym/groups/: _base.html  _cyclic.html  _so.html  _sp.html  _su.html
_modules/sympy/core/: basic.html  kind.html
_sources/: algebra.rst.txt  group.rst.txt  modules.rst.txt
_static/: documentation_options.js
docs/: .buildinfo  Makefile  genindex.html  index.html  liesym.algebras.html  liesym.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/source/: algebra.rst  conf.py  group.rst  index.rst  liesym.algebras.rst  liesym.rst
docs/source/images/image_src/: Dockerfile  picgen.py
docssrc/source/: conf.py  liesym.algebras.rst
liesym/: __init__.py  __main__.py  _circ.py
liesym/algebras/: __init__.py  _backend.py  _base.py  _classic.py  _exceptionals.py  _methods.py  backend.py  base.py  classic.py  exceptionals.py  methods.py
liesym/groups/: __init__.py  _backend.py  _base.py  _cyclic.py  _exceptionals.py  _so.py  _sp.py  _su.py  _u1.py
notebooks/: Example.ipynb  Notebook.ipynb
rootsystem/: Cargo.toml
rootsystem/src/: common.rs  lib.rs  roots.rs
scripts/: clean.py  release.py
src/: debug.rs  lib.rs  liealgebra_interface.rs  liealgebras.rs  matrix_methods.rs  orbit.rs  tensordecomp.rs  utils.rs
src/subalgebras/: branching_rules.rs  groups.rs  mod.rs
tests/: __init__.py  test_backend.py  test_classic.py  test_exceptionals.py
tests/test_algebra/: __init__.py  test_backend.py  test_classic.py  test_exceptionals.py
tests/test_group/: __init__.py  test_backend.py  test_cyclic.py  test_liegroup.py
