[package]
name = "liesym"
version = "0.5.0"
authors = ["Nathan Papapietro <npapapietro95@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
documentation = "https://npapapietro.github.io/liesym"
repository = "https://github.com/npapapietro/liesym"
description = "Sympy Lie Algebra extensions powered by rust."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "liesym"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "0.15.3", features = ["approx", "rayon"]}
num-traits = "0.2.14"
numpy = {git = "https://github.com/PyO3/rust-numpy"}
num = "0.4.0"
itertools = "0.10.1"
# pyo3 = {version = "0.14.1", features = ["extension-module"], default-features=false}

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]
