[package]
name = "liesym"
version = "0.6.0"
authors = [ "Nathan Papapietro <npapapietro95@gmail.com>",]
edition = "2018"
license-file = "LICENSE"
documentation = "https://npapapietro.github.io/liesym"
repository = "https://github.com/npapapietro/liesym"
description = "Sympy Lie Algebra extensions powered by rust."
readme = "README.md"

[lib]
name = "liesym"
crate-type = [ "cdylib",]

[dependencies]
num-traits = "0.2.14"
numpy = "0.14.1"
num = "0.4.0"
itertools = "0.10.1"

[workspaces]
members = [ "rootsystem",]

[dependencies.rootsystem]
path = "./rootsystem"

[dependencies.ndarray]
version = "0.15.3"
features = [ "approx", "rayon",]

[dependencies.pyo3]
version = "0.14.1"
features = [ "extension-module",]
