[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool]
[tool.maturin]
module-name = "liesym._liesym_rust"
features = ["pyo3/extension-module"]

[tool.poetry]
authors = ["Nathan Papapietro <npapapietro95@gmail.com>"]
name = "liesym"
description = "Sympy Lie Algebra extensions powered by rust."
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.8,<4"
numpy = ">=1.19"
sympy = ">=1.7.1"
symengine = ">=0.7.2"

[tool.poetry.group]
[tool.poetry.group.dev.dependencies]
autopep8 = ">=1.5.6"
jupyter = ">=1.0.0"
ufmt = ">=2.2.0"
pytest = ">=6.2.3"
maturin = ">=1.3"
setuptools = ">=60"
tomlkit = ">=0.12"
yq = ">=3.2"
mypy = ">=1.7.0"

[tool.poetry.group.docs.dependencies]
Sphinx = ">=5"
groundwork-sphinx-theme = ">=1.1.1"
numpydoc = ">=1.1.0"
pydata_sphinx_theme = ">=0.14.2"
sphinx-math-dollar = ">=1.2"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests"]


[project]
classifiers = ["Topic :: Scientific/Engineering :: Mathematics", "Topic :: Scientific/Engineering :: Physics", "Programming Language :: Rust", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11"]
description = "Sympy Lie Algebra extensions powered by rust."
name = "liesym"
readme = "README.md"
version = "0.0.0"
dependencies = ["mpmath==1.3.0 ; python_version >= \"3.8\" and python_version < \"4\"", "numpy==1.24.4 ; python_version >= \"3.8\" and python_version < \"4\"", "symengine==0.10.0 ; python_version >= \"3.8\" and python_version < \"4\"", "sympy==1.12 ; python_version >= \"3.8\" and python_version < \"4\""]

[[project.authors]]
name = "Nathan Papapietro"
email = "npapapietro95@gmail.com"

[project.urls]
Documentation = "https://npapapietro.github.io/liesym"
Homepage = "https://github.com/npapapietro/liesym"


