[package]
name = "rootsystem"
version = "0.1.0"
authors = ["Nathan Papapietro <npapapietro95@gmail.com>"]
edition = "2018"

[lib]
name = "rootsystem"

[dependencies]
num-traits = "0.2.14"
numpy = "0.14.1"
num = "0.4.0"
itertools = "0.10.1"

[dependencies.ndarray]
version = "0.15.3"
features = [ "approx", "rayon",]